# akunambol

./: .gitignore  CMakeLists.txt  COPYING  COPYING.GPLv2  COPYING.GPLv3  Messages.sh  README  RELEASE_TODO  akunambol-syncsource.desktop  akunambol.desktop  config.h.cmake
akonadi/: akonadi-dialog.cpp  akonadi-dialog.h  akonadi-dialog.ui  akonadiwalker.cpp  akonadiwalker.h  contacts.cpp  contacts.h  main.cpp
client/: CMakeLists.txt  README  appsyncsource.cpp  appsyncsource.h  appsyncsourceconfig.cpp  appsyncsourceconfig.h  appsyncsourcemanager.cpp  collectionsfetcher.cpp  collectionsfetcher.h
client/doc/: CMakeLists.txt  index.docbook
client/src/: CMakeLists.txt  Messages.sh  akunambol.cpp  akunambol.desktop  akunambol.h  akunambol.kcfg  akunambolMainWindow.ui  akunambolui.rc  akunambolview.cpp  akunambolview.h  akunambolview_base.ui  main.cpp  settings.kcfgc
cmake/: FindFunambol.cmake
cmake/modules/: FindFunambol.cmake
images/icons/: CMakeLists.txt  hisc-app-akunambol.svgz
kcmsync/: kcm_sync.desktop  kcmsync.cpp  kcmsync.h  kcmsync.ui  serverproperties.cpp  serverproperties.h  serverproperties.ui  syncjob.cpp  syncjob.h  synclog.txt  syncserver.cpp  syncserver.h
kded/: akunambolsync.desktop  akunambolsyncdaemon.cpp  akunambolsyncdaemon.h  org.kde.akunambolsync.xml
likeback/: LikeBackBar.cpp  LikeBackDialog.cpp
likeback/.svn/: all-wcprops  entries
plugins/: CMakeLists.txt
plugins/contacts/: CMakeLists.txt  akunambol-syncsource-contacts.desktop  contactsbackend.cpp  contactsbackend.h  contactssource.cpp  contactssource.h
plugins/funambol/: CMakeLists.txt
plugins/funambol/common/: CMakeLists.txt
plugins/funambol/common/src/: KFunSyncConfig.cpp  akonadisource.cpp  appsyncsource.cpp  appsyncsource.h  appsyncsourceconfig.cpp  appsyncsourceconfig.h  appsyncsourcemanager.h  collectionsfetcher.cpp  funambolsyncsource.cpp  funambolsyncsource.h  sourcemanager.cpp  sourcemanager.h
plugins/test/: main.cpp
qtclient/Akunambol/: Akunambol.pro  config.h  config.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
qtgui/: .gitignore  CMakeLists.txt  KDELog.cpp  KDELog.h  config.cpp  config.h  config.ui  configdialog.cpp  configdialog.h  configdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settings.ui  sourcepushbutton.cpp  sourcepushbutton.h  standardsourcesettings.cpp  standardsourcesettings.h  standardsourcesettings.ui
resource/: CMakeLists.txt  Messages.sh  resourceresource.cpp  resourceresource.desktop  resourceresource.h  settings.kcfgc
syncsource/: CalendarSource.cpp  CalendarSource.h  ContactsSource.cpp  ContactsSource.h  KFunSync.h  KFunSyncConfig.cpp  KFunSyncConfig.h  KFunSyncOpt.cpp  KFunSyncOpt.h  akonadisource.cpp  akonadisource.h  contactssource.cpp  contactssource.h  contactssyncer.cpp  eventssource.cpp  eventssource.h  main.cpp  sourcemanager.cpp  sourcemanager.h  statuslistener.cpp  statuslistener.h  syncconfig.cpp  syncconfig.h  taskssource.cpp  taskssource.h
test/: dialog.cpp  dialog.h  dialog.ui  main.cpp
